[package]
name = "hello-rust"
version = "0.1.1"
authors = ["Bruno Ricci"]
edition = "2018"

[[bin]]
name = "mybin"
path = "src/bin/ring1.rs"

[[bin]]
name = "tokio1"
path = "src/bin/tokio1.rs"

[[bin]]
name = "all"
path = "src/main.rs"

[dependencies]
jsonwebtoken = "7.2.0"
serde_derive = "1.0.123"
serde = "1.0.123"
ring = "0.16.20"
untrusted = "0.6.2"
rand = "0.8.3"
reqwest = "0.11.0"
hex-literal = "0.2.0"
#tokio = "0.1.22"
tokio = { version = "1" , feature = ["full"]}
futures = "0.3.12"